<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simon Says</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_join">Join Game</string>
    <string name="title">Simon Says</string>
    <string name="round">Round</string>
    <string name="round_number">R</string>
    <string name="instruction">Instructions</string>
    <string name="player1">P1:</string>
    <string name="player2">P2:</string>
    <string name="player3">P3:</string>
    <string name="player4">P4:</string>
    <string name="instruction_simon">Simon Says</string>
    <string name="help">Help</string>
    <string name="start_game">Start Game</string>
    <string name="instruction_text">INSTRUCTIONS FOR GAME FILL HERE</string>
    <string name="please_wait">Please wait...</string>
    <string name="welcome">Hello and Welcome!</string>

    <style name="buttonStyle">
        <item name="android:shadowColor">#000000</item>
        <item name="android:layout_margin">4dp</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string-array name="instructions_action_ind">
        <item>Go Left </item>
        <item>Go Right </item>
        <item>Go Up </item>
        <item>Go Down </item>
        <item>Punch Forward </item>
        <item>Elbow Back </item>
        <item>Stay Still </item>
        <item>Move </item>
    </string-array>
    <string-array name="instructions_mental_ind">
        <item>Odd Add </item>
        <item>Even Add </item>
        <item>Odd Subtract </item>
        <item>Even Subtract</item>
        <item>Add </item>
        <item>Subtract </item>
        <item>Double Number </item>
    </string-array>
    <string-array name="instructions_group">
        <item>Go Left</item>
        <item>Go Right</item>
        <item>Go Up</item>
        <item>Go Down</item>
        <item>Punch Forward</item>
        <item>Elbow Back</item>
        <item>Stay Still</item>
        <item>Move</item>
        <item>Odd Add 7</item>
        <item>Even Add 7</item>
        <item>Odd Subtract 4</item>
        <item>Even Subtract 4</item>
        <item>Add 7</item>
        <item>Subtract 4</item>
        <item>Double Number</item>
    </string-array>

    <string name="title_activity_game">Simon Says</string>
    <string name="title_activity_activity_instruction">Simon Says</string>
    <string name="title_activity_ready">ReadyActivity</string>

</resources>
