<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.douglass_macbook.ss12_simon_says.GameActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:textStyle="bold"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/title"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/instruction"
            android:id="@+id/textView_instruction"
            android:layout_below="@+id/textView_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView_title"
            android:layout_alignEnd="@+id/textView_title" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:layout_above="@+id/textView_round"
            android:layout_below="@+id/textView_instruction">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/player1"
                android:id="@+id/textView_P1"
                android:layout_weight="4" />

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/player2"
                android:id="@+id/textView_P2"
                android:layout_weight="4" />

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/player3"
                android:id="@+id/textView_P3"
                android:layout_weight="4" />

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/player4"
                android:id="@+id/textView_P4"
                android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="90"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/round"
                android:textSize="60sp"
                android:id="@+id/textView_round"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                 />

            <TextView
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/round_number"
                android:id="@+id/textView_roundNum"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"

                android:layout_weight="32.47" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
